# KousatenMixer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Core/: AudioDeviceHandler.cpp  AudioDeviceHandler.h  AudioEngine.cpp  AudioEngine.h  RtAudioManager.cpp  RtAudioManager.h
Source/Effects/: ChaosGenerator.cpp  ChaosGenerator.h  DelayProcessor.cpp  DelayProcessor.h  GrainProcessor.cpp  GrainProcessor.h  ReverbProcessor.cpp  ReverbProcessor.h
Source/Mixer/: AuxBus.cpp  AuxBus.h  Channel.cpp  Channel.h  MixBus.cpp  MixBus.h  SendPanner.cpp  SendPanner.h
Source/Sampler/: AudioLayer.cpp  AudioLayer.h
Source/UI/: AuxOutputComponent.cpp  AuxOutputComponent.h  ChannelStripComponent.cpp  ChannelStripComponent.h  SendBusComponent.cpp  SendBusComponent.h  SendPannerComponent.cpp  SendPannerComponent.h
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/JUCE/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
build-release/JUCE/modules/: Makefile  cmake_install.cmake
build-release/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
build-release/JUCE/tools/modules/: Makefile  cmake_install.cmake
build-release/KousatenMixer_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build-release/KousatenMixer_artefacts/JuceLibraryCode/KousatenMixer/: Info.plist
build-release/KousatenMixer_artefacts/JuceLibraryCode/Release/: Defs.txt
build-release/KousatenMixer_artefacts/Release/Kousaten Mixer.app/Contents/: Info.plist
